<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/payload_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/payload_id"
        android:textColor="@color/black"
        android:layout_margin="7dp"
        android:textSize="17sp" />

    <View
        android:layout_width="0.2dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/type"
        android:layout_margin="7dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/payload_type"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <View
        android:layout_width="0.2dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/mass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="7dp"
        android:text="@string/mass"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <View
        android:layout_width="0.2dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/reused"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/reused"
        android:textColor="@color/black"
        android:textSize="17sp" />


</LinearLayout>